Bug 1850484 - Ignore installed fonts with empty family-name. r=gfx-reviewers,bradwerth

Differential Revision: https://phabricator.services.mozilla.com/D187921